--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,20 +3,48 @@
     <%= link_to t(".mlog"), root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t(".home"), root_path %></li>
-        <li><%= link_to t(".help"), help_path %></li>
+        <li>
+          <%= link_to root_path do %>
+            <span class="glyphicon glyphicon-home"></span>
+            <%= t ".home" %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to help_path do %>
+            <span class="glyphicon glyphicon-question-sign"></span>
+            <%= t ".help" %>
+          <% end %>
+        </li>
         <% if logged_in? %>
-          <li><%= link_to t(".user"), "#" %></li>
+          <li>
+            <%= link_to users_path do %>
+              <span class="glyphicon glyphicon-briefcase"></span>
+              <%= t ".user" %>
+            <% end %>
+          </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t ".account" %> <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to t(".profile"), current_user %></li>
-              <li><%= link_to t(".settings"), "#" %></li>
+              <li>
+                <%= link_to current_user do %>
+                  <span class="glyphicon glyphicon-user"></span>
+                  <%= t ".profile" %>
+                <% end %>
+              </li>
+              <li>
+                <%= link_to edit_user_path(current_user) do %>
+                  <span class="glyphicon glyphicon-cog"></span>
+                  <%= t ".setting" %>
+                <% end %>
+              </li>
               <li class="divider"></li>
               <li>
-                <%= link_to t(".logout"), logout_path, method: :delete %>
+                <%= link_to logout_path, method: :delete do %>
+                  <span class="glyphicon glyphicon-off"></span>
+                  <%= t ".logout" %>
+                <% end %>
               </li>
             </ul>
           </li>
