--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_for @user do |f| %>
+  <%= render "shared/error_messages" %>
+
   <%= f.label :name, t(".name") %>
   <%= f.text_field :name, class: "form-control" %>
 
