--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<% provide :title, t(".all_user") %>
+<h1><%= t ".all_user" %></h1>
+
+<%= will_paginate %>
+
+<ul class="users">
+  <%= render partial: "user", collection: @users %>
+</ul>
+
+<%= will_paginate %>
