--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
     <%= render "layouts/header" %>
     <div class="container">
       <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <div id="message-appli" class="alert alert-<%= message_type %>">
+          <%= message %>
+        </div>
       <% end %>
       <%= yield %>
       <%= render "layouts/footer" %>
