--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,17 +1,33 @@
-<li id="micropost-<%= micropost.id %>">
-  <%= link_to gravatar_for(micropost.user, size: Settings.user.gravatar_size_50),
-    micropost.user %>
-  <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
-  <span class="content">
-    <%= micropost.content %>
-    <%= image_tag micropost.picture.url if micropost.picture? %>
-  </span>
-  <span class="timestamp">
-    <%= t ".posted" %> <%= time_ago_in_words micropost.created_at %>
-      <%= t ".ago" %>
-    <% if current_user.current_user? micropost.user %>
-      <%= link_to t(".delete"), micropost, method: :delete,
-        data: {confirm: t(".sure")} %>
-    <% end %>
-  </span>
-</li>
+<div class="well">
+  <div class="media-body">
+    <li id="micropost-<%= micropost.id %>">
+      <%= link_to gravatar_for(micropost.user,
+        size: Settings.user.gravatar_size_50), micropost.user %>
+      <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
+      <span class="content">
+        <%= micropost.content %>
+        <%= image_tag micropost.picture.url if micropost.picture? %>
+      </span>
+      <span class="timestamp">
+        <%= t ".posted" %> <%= time_ago_in_words micropost.created_at %>
+          <%= t ".ago" %>
+        <div class="text-right">
+          <% if current_user.current_user? micropost.user %>
+            <%= link_to t(".delete"), micropost, method: :delete,
+              data: {confirm: t(".sure")} %>
+          <% end %>
+        </div>
+      </span><br>
+      <li id="comments-list-<%= micropost.id %>" class="ds">
+        <%= render partial: "comments/comment",
+          collection: micropost.comments, as: "comment" %><br>
+      </li>
+        <div id="comment-form-<%= micropost.id %>">
+            <% if logged_in? && current_user.following?(micropost.user) ||
+              micropost.user %>
+              <%= render "comments/form", micropost: micropost %>
+            <% end %>
+        </div>
+    </li>
+  </div>
+</div>
