--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,9 @@
       <section class="user_info">
         <%= render "shared/user_info" %>
       </section>
+      <section class="stats">
+        <%= render "shared/stats" %>
+      </section>
       <section class="micropost_form">
         <%= render "shared/micropost_form" %>
       </section>
@@ -18,7 +21,7 @@
   <div class="center jumbotron">
     <h1><%= t ".welcome" %></h1>
     <h2>
-      <%= t ".wehope" %>
+      <%= t ".it_free" %>
     </h2>
     <%= link_to t(".signup"), signup_path, class: "btn btn-lg btn-primary" %>
   </div>
