--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,9 +6,13 @@
         <%= gravatar_for @user %>
         <%= @user.name %><br>
       </h1>
+      <section class="stats">
+      <%= render "shared/stats" %>
+    </section>
     </section>
   </aside>
   <div class="col-md-8">
+    <%= render "follow_form" if logged_in? %>
     <% if @user.microposts.any? %>
       <h3><%= t ".micropost" %>(<%= @user.microposts.size %>)</h3>
       <%= will_paginate @microposts %>
