--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,1 +1,1 @@
-$('.comment-<%= micropost.id %>').append('<%= j render partial: "comments/comment", locals:{comment: @comment} %>');
+// $('.comment-<%= micropost.id %>').append('<%= j render partial: "comments/comment", locals:{comment: @comment} %>');
