--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,7 @@
 <footer class="footer">
+  <small>
+    <%= t ".author" %><%= link_to t(".name"), "http://fb.com/storm291" %></a>
+  </small>
   <nav>
     <ul>
       <li><%= link_to t(".about"), about_path %></li>
