--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -5,6 +5,7 @@
         size: Settings.user.gravatar_size_50), micropost.user %>
       <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
       <span class="content">
+        <b><%= micropost.tital %></b><br>
         <%= micropost.content %>
         <%= image_tag micropost.picture.url if micropost.picture? %>
       </span>
@@ -12,19 +13,20 @@
         <%= t ".posted" %> <%= time_ago_in_words micropost.created_at %>
           <%= t ".ago" %>
         <div class="text-right">
-          <% if current_user.current_user? micropost.user %>
+          <% if current_user.current_user?(micropost.user) %>
             <%= link_to t(".delete"), micropost, method: :delete,
               data: {confirm: t(".sure")} %>
           <% end %>
         </div>
-      </span><br>
+      </span>
+
       <li id="comments-list-<%= micropost.id %>" class="ds">
         <%= render partial: "comments/comment",
           collection: micropost.comments, as: "comment" %><br>
       </li>
         <div id="comment-form-<%= micropost.id %>">
-            <% if logged_in? && current_user.following?(micropost.user) ||
-              micropost.user %>
+            <% if logged_in? && (current_user.following?(micropost.user) ||
+              current_user.current_user?(micropost.user)) %>
               <%= render "comments/form", micropost: micropost %>
             <% end %>
         </div>
