--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,6 +1,9 @@
 <%= form_for @micropost do |f| %>
   <%= render "shared/error_messages", object: f.object %>
   <div class="field">
+    <%= f.label :tital, t(".tital") %>
+    <%= f.text_field :tital, placeholder: t(".add_tital") %>
+    <%= f.label :content, t(".content") %>
     <%= f.text_area :content, placeholder: t(".compose") %>
   </div>
   <%= f.submit t(".post"), class: "btn btn-primary" %>
