--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,11 +18,30 @@
     </div>
   </div>
 <% else %>
-  <div class="center jumbotron">
-    <h1><%= t ".welcome" %></h1>
-    <h2>
-      <%= t ".it_free" %>
-    </h2>
-    <%= link_to t(".signup"), signup_path, class: "btn btn-lg btn-primary" %>
+  <div class="row">
+    <div class="col-md-8 center jumbotron">
+      <h1><%= t ".welcome" %></h1>
+      <h2>
+        <%= t ".it_free" %>
+      </h2>
+      <%= link_to t(".signup"), signup_path, class: "btn btn-lg btn-primary" %>
+    </div>
+    <div class="col-md-4 home-login">
+      <%= form_for :session, url: login_path do |f| %>
+
+        <%= f.label :email %>
+        <%= f.email_field :email, class: "form-control" %>
+
+        <%= f.label :password %>
+        <%= f.password_field :password, class: "form-control" %>
+
+        <%= f.label :remember_me, class: "checkbox inline" do %>
+          <%= f.check_box :remember_me %>
+          <span><%= t ".remember_me" %></span>
+        <% end %>
+
+        <%= f.submit t(".login"), class: "btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
 <% end %>
